# xenopict

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  DESIGN.md  Makefile  README.md  TODO.md  coverage.ini  pyproject.toml  pyproject.toml.staged  requirements.txt  setup.py  test.ipynb  test.py
.circleci/: config.yml
.cursor/rules/: style.mdc  tasks.mdc
.github/workflows/: ci.yml
docs/: examples.ipynb  requirements.txt
docs/source/: api.rst  conf.py  declarative.md  examples.ipynb  examples.md  index.rst  modules.rst  molecule.md  quickstart.ipynb  quickstart.md  xenopict.colormap.rst  xenopict.declarative.rst  xenopict.rst
docs/source/api/: xenopict.alignment.rst  xenopict.declarative.rst  xenopict.declarative.types.rst  xenopict.drawer.rst  xenopict.magic.rst  xenopict.monkey.rst  xenopict.plotdot.rst  xenopict.rst
notebook/: colorspace.ipynb  examples.ipynb  monkey.ipynb  pandas.ipynb  plotdot  quickstart.ipynb  rdkit.ipynb  svgpathtools.ipynb
plotdot/: __init__.py  rdkit.py
scripts/: generate_schema.py  process_elkjs_svg.py
xenopict/: __init__.py  _cm_def.py  _version.py  alignment.py  clinton.ipynb  colormap.py  drawer.py  magic.py  monkey.py  plotdot.py  svg.py
xenopict/declarative/: __init__.py  types.py
xenopict/layout/: __init__.py  elk.py  svg_elk.py
xenopict/layout/js/: __init__.py  elkjs-svg-processed.js
xenopict/tests/: test_align.py  test_declarative.py  test_patcher.py  test_xenopict.py
xenopict/tests/test_layout/: __init__.py  test_elk.py  test_elk_env.py  test_elk_svg.py  test_miniracer.py  test_svg_elk.py
xenopict/types/: __init__.py  annotations.py  base.py  layout.py  molecule.py  style.py
